git commit -m "BJS2-35244 <StreamAPI-2 changed findUniquePairsWithSum method, changed extra HashSet to distinct(), changed Collectors.toList() to .toList()>"