@@ -11,34 +11,33 @@ import java.util.stream.Collectors;
 
 public class ListOperations {
     public static Set<List<Integer>> findUniquePairsWithSum(List<Integer> numbers, int sum) {
-        Set<List<Integer>> pairs;
         Set<Integer> set = new HashSet<>(numbers);
-        pairs = numbers.stream()
+        return numbers.stream()
                 .filter(num -> set.contains(sum - num))
                 .map(num -> Arrays.asList(num, sum - num))
+                .distinct()
                 .peek(Collections::sort)
                 .collect(Collectors.toSet());
-        return pairs;
     }
 
     public static List<String> getSortedCapitals(Map<String, String> countries) {
         return countries.entrySet().stream()
                 .sorted(Map.Entry.comparingByKey())
                 .map(Map.Entry::getValue)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<String> filterAndSort(List<String> strings, char letter) {
         return strings.stream()
                 .filter(s -> s.startsWith(String.valueOf(letter)))
                 .sorted(Comparator.comparingInt(String::length))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<String> convertToBinary(List<Integer> numbers) {
         return numbers.stream()
                 .map(Integer::toBinaryString)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<String> filterAndSort(List<String> strings, String alphabet) {
@@ -46,6 +45,6 @@ public class ListOperations {
         return strings.stream()
                 .filter(s -> s.matches(regex))
                 .sorted(Comparator.comparingInt(String::length))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
